# popsub

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build_rs_cov.profraw  cobertura.xml
.github/workflows/: rust.yml
config/: default.toml
crates/popsub/: Cargo.toml  README.md
crates/popsub/examples/: simple_client.rs
crates/popsub/src/: main.rs
crates/popsub_broker/: Cargo.toml  README.md
crates/popsub_broker/src/: engine.rs  lib.rs  message.rs  tests.rs  topic.rs
crates/popsub_client/: Cargo.toml  README.md
crates/popsub_client/src/: pubsub_client.rs  tests.rs
crates/popsub_config/: Cargo.toml  README.md
crates/popsub_config/src/: lib.rs  settings.rs  tests.rs
crates/popsub_persistence/: Cargo.toml  README.md
crates/popsub_persistence/src/: lib.rs  sled_store.rs  tests.rs
crates/popsub_transport/: Cargo.toml  README.md
crates/popsub_transport/src/: lib.rs  message.rs  tests.rs  websocket.rs  websocket_tests.rs
crates/popsub_utils/: Cargo.toml  README.md
crates/popsub_utils/src/: error.rs  lib.rs  logging.rs
src/: lib.rs  main.rs
src/broker/: engine.rs  message.rs  mod.rs  tests.rs  topic.rs
src/client/: client.rs  mod.rs  pubsub_client.rs
src/config/: default.toml  mod.rs  settings.rs  tests.rs
src/persistence/: mod.rs  sled_store.rs
src/tests/: integration_test.rs
src/transport/: message.rs  mod.rs  tests.rs  websocket.rs  websocket_tests.rs
src/utils/: error.rs  mod.rs
