[package]
name = "popsub"
version = "0.1.0"
edition = "2024"

[dependencies]
popsub_broker = { path = "../popsub_broker" }
popsub_client = { path = "../popsub_client" }
popsub_config = { path = "../popsub_config" }
popsub_persistence = { path = "../popsub_persistence" }
popsub_transport = { path = "../popsub_transport" }
popsub_utils = { path = "../popsub_utils" }

tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1"
futures-util = "0.3.31"
tokio-tungstenite = "0.28.0"
url = "2.4.0"
clap = { version = "4.3", features = ["derive"] }
